/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object DetailScreenTestTags {
    const val BACK_BUTTON = "detail:back"
    const val PIN_BUTTON = "detail:pin"
    const val NOTIFICATION_BUTTON = "detail:notification"
    const val ARCHIVE_BUTTON = "detail:archive"
    const val IMAGE_LIST = "detail:images"
    const val DRAWING_ITEM = "detail:drawing" // Assuming a prefix for dynamic drawing items
    const val TITLE_TEXT_FIELD = "detail:title"
    const val MORE_CHECK_BUTTON = "detail:morecheck"
    const val HIDE_CHECK_MENU_ITEM = "detail:hidecheck"
    const val UNCHECK_ALL_MENU_ITEM = "detail:uncheckall"
    const val DELETE_CHECK_MENU_ITEM = "detail:deletecheck"
    const val CONTENT_TEXT_FIELD = "detail:content"
    const val ADD_CHECK_ITEM_BUTTON = "detail:add_check_item_button"
    const val MORE_BUTTON = "detail:more"
    const val COLORS_BUTTON = "detail:colors"
    const val OPTIONS_BUTTON = "detail:options"
    const val VOICE_PAUSE_BUTTON = "detail:voice:pause"
    const val VOICE_PLAY_BUTTON = "detail:voice:play"
    const val VOICE_DELETE_BUTTON = "detail:voice:delete"
    const val DETAIL_LIST = "detail:list"
}
