/*
 * Designed and developed by 2024 mshdabiola (lawal abiola)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.mshdabiola.model.testtag

object MainScreenTestTags {
    const val MAIN_OTHERS_SECTION_HEADER = "mainscreen:others_section_header"
    const val MAIN_LOADING_STATE = "mainscreen:loading_state"
    const val MAIN_SCAFFOLD_SUCCESS = "mainscreen:scaffold_success"
    const val MAIN_NOTES_GRID = "mainscreen:notes_grid"
    const val MAIN_EMPTY_STATE_VIEW = "mainscreen:empty_state_view"
    const val MAIN_PINNED_SECTION_HEADER = "mainscreen:pinned_section_header"
    const val MAIN_NOTE_CARD_PINNED_PREFIX = "mainscreen:note_card_pinned_"
    const val MAIN_NOTE_CARD_OTHERS_HEADER = "mainscreen:others_section_header" // For the "OTHERS" text
    const val MAIN_NOTE_CARD_UNPINNED_PREFIX = "mainscreen:note_card_unpinned_"
}
